--- a/unbound/personal.blacklist.conf
+++ b/unbound/personal.blacklist.conf
@@ -3,10 +3,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 1 day
-# Last modified: 02 Jul 2023 08:45 UTC
-# Version: 2023.0702.0845.37
+# Last modified: 02 Jul 2023 23:33 UTC
+# Version: 2023.0702.2333.52
 # Syntax: Unbound
-# Number of entries: 42399
+# Number of entries: 42406
 #
 server:
 local-zone: "000nethost.com." always_nxdomain
@@ -669,7 +669,6 @@ local-zone: "mvconf.cloud.360safe.com." always_nxdomain
 local-zone: "kuaikan.netmon.360safe.com." always_nxdomain
 local-zone: "stat.360safe.com." always_nxdomain
 local-zone: "ini.update.360safe.com." always_nxdomain
-local-zone: "softdl.360tpcdn.com." always_nxdomain
 local-zone: "360yield.com." always_nxdomain
 local-zone: "360yield-basic.com." always_nxdomain
 local-zone: "3615407.xyz." always_nxdomain
@@ -1128,6 +1127,7 @@ local-zone: "95a056626e.com." always_nxdomain
 local-zone: "95ppq87g.de." always_nxdomain
 local-zone: "95urbehxy2dh.top." always_nxdomain
 local-zone: "95xiu.com." always_nxdomain
+local-zone: "96.lt." always_nxdomain
 local-zone: "9603gg.cc." always_nxdomain
 local-zone: "9688522.com." always_nxdomain
 local-zone: "9738624519.com." always_nxdomain
@@ -1194,7 +1194,6 @@ local-zone: "a-i-ad.com." always_nxdomain
 local-zone: "a-mo.net." always_nxdomain
 local-zone: "a-mx.com." always_nxdomain
 local-zone: "a-new86.com." always_nxdomain
-local-zone: "a-q-f.com." always_nxdomain
 local-zone: "a-spy.com." always_nxdomain
 local-zone: "a-static.com." always_nxdomain
 local-zone: "a016967c8c783c38e555ae97b38fe0566ad9b398d255e32e833f160d.com." always_nxdomain
@@ -5846,6 +5845,7 @@ local-zone: "bennelapiose.com." always_nxdomain
 local-zone: "benonblkd.xyz." always_nxdomain
 local-zone: "benoopto.com." always_nxdomain
 local-zone: "xml-v4.benrif-solutions.com." always_nxdomain
+local-zone: "benshdarat.website." always_nxdomain
 local-zone: "bentonow.com." always_nxdomain
 local-zone: "benumelan.com." always_nxdomain
 local-zone: "benzolescabrin.com." always_nxdomain
@@ -5939,7 +5939,6 @@ local-zone: "bestsafefast.com." always_nxdomain
 local-zone: "pkimbc.bestsecret.com." always_nxdomain
 local-zone: "bestservedmcc.com." always_nxdomain
 local-zone: "tracker.bestshopping.com." always_nxdomain
-local-zone: "bestsrv.de." always_nxdomain
 local-zone: "besttoolbars.net." always_nxdomain
 local-zone: "bestvenadvertising.com." always_nxdomain
 local-zone: "bestweb.com." always_nxdomain
@@ -6540,6 +6539,7 @@ local-zone: "boftogro.net." always_nxdomain
 local-zone: "bogsboot.com." always_nxdomain
 local-zone: "so.boh.com." always_nxdomain
 local-zone: "bohemia-marketlink.com." always_nxdomain
+local-zone: "bohobanjaara.com." always_nxdomain
 local-zone: "boholnaldixtours.com." always_nxdomain
 local-zone: "bohonef.com." always_nxdomain
 local-zone: "boilingbeetle.com." always_nxdomain
@@ -7925,6 +7925,7 @@ local-zone: "chatintr.com." always_nxdomain
 local-zone: "w.chatlio.com." always_nxdomain
 local-zone: "chatntr.com." always_nxdomain
 local-zone: "serve.ads.chaturbate.com." always_nxdomain
+local-zone: "chatwhattsapp.co." always_nxdomain
 local-zone: "chaudoantown.com." always_nxdomain
 local-zone: "chaussew.net." always_nxdomain
 local-zone: "chauwout.xyz." always_nxdomain
@@ -8022,6 +8023,7 @@ local-zone: "analytics.chilevision.cl." always_nxdomain
 local-zone: "sanalytics.chilevision.cl." always_nxdomain
 local-zone: "tracking.chilipiper.com." always_nxdomain
 local-zone: "chillcondole.com." always_nxdomain
+local-zone: "chillglobalhotel.com." always_nxdomain
 local-zone: "chimamanndgaocozmi.com." always_nxdomain
 local-zone: "chimpcity.com." always_nxdomain
 local-zone: "chimpstatic.com." always_nxdomain
@@ -9842,6 +9844,7 @@ local-zone: "cnusiot.com." always_nxdomain
 local-zone: "cnwebperformance.biz." always_nxdomain
 local-zone: "cnzz.com." always_nxdomain
 local-zone: "cnzz.net." always_nxdomain
+local-zone: "co.vu." always_nxdomain
 local-zone: "adoffice.11st.co.kr." always_nxdomain
 local-zone: "ds.11st.co.kr." always_nxdomain
 local-zone: "rake.11st.co.kr." always_nxdomain
@@ -11340,7 +11343,6 @@ local-zone: "corneredcommunicationcancel.com." always_nxdomain
 local-zone: "corolain.ru." always_nxdomain
 local-zone: "monetize-api.coronalabs.com." always_nxdomain
 local-zone: "stats.coronalabs.com." always_nxdomain
-local-zone: "coronavirustechhandbook.com." always_nxdomain
 local-zone: "corpojuicebar.com." always_nxdomain
 local-zone: "corporategarnish.com." always_nxdomain
 local-zone: "corporatethankfulfinding.com." always_nxdomain
@@ -12012,6 +12014,7 @@ local-zone: "danzigtitoism.guru." always_nxdomain
 local-zone: "daoisthealing.com." always_nxdomain
 local-zone: "track.dapex-tracking.com." always_nxdomain
 local-zone: "daphnews.com." always_nxdomain
+local-zone: "dappaa.site." always_nxdomain
 local-zone: "dapper.net." always_nxdomain
 local-zone: "dapperfloor.com." always_nxdomain
 local-zone: "daque.cn." always_nxdomain
@@ -14238,6 +14241,7 @@ local-zone: "dledthebarrowb.xyz." always_nxdomain
 local-zone: "dlfvgndsdfsn.com." always_nxdomain
 local-zone: "dlfynky.net." always_nxdomain
 local-zone: "dlhqffirehv.com." always_nxdomain
+local-zone: "dliteoats.com." always_nxdomain
 local-zone: "streamstats.prd.dlive.tv." always_nxdomain
 local-zone: "dlmewheniyv.xyz." always_nxdomain
 local-zone: "dlmonitize.com." always_nxdomain
@@ -14417,6 +14421,7 @@ local-zone: "doogroum.xyz." always_nxdomain
 local-zone: "dooloust.net." always_nxdomain
 local-zone: "doomedchurrip.space." always_nxdomain
 local-zone: "doopimim.net." always_nxdomain
+local-zone: "doorblog.jp." always_nxdomain
 local-zone: "collector.doordash.com." always_nxdomain
 local-zone: "doorway-of-guidance.com." always_nxdomain
 local-zone: "doownl0ad3s.com." always_nxdomain
@@ -16471,6 +16476,7 @@ local-zone: "favoritetonic.com." always_nxdomain
 local-zone: "favorscenes.com." always_nxdomain
 local-zone: "fawningforegut.life." always_nxdomain
 local-zone: "faxbxpmudcwwxt.com." always_nxdomain
+local-zone: "faxifa.xyz." always_nxdomain
 local-zone: "faxqaaawyb.com." always_nxdomain
 local-zone: "fayiadd.com." always_nxdomain
 local-zone: "data-4ede7e9c86.faz.net." always_nxdomain
@@ -16893,7 +16899,6 @@ local-zone: "flerap.com." always_nxdomain
 local-zone: "fleraprt.com." always_nxdomain
 local-zone: "support.flex.com." always_nxdomain
 local-zone: "elqtracking.flexera.com." always_nxdomain
-local-zone: "flexfinitymedia.net." always_nxdomain
 local-zone: "flexiblelocator.com." always_nxdomain
 local-zone: "tracking-collector.site.flexispot.com." always_nxdomain
 local-zone: "flexlinks.com." always_nxdomain
@@ -16996,7 +17001,6 @@ local-zone: "fly-analytics.com." always_nxdomain
 local-zone: "weblog.flyasiana.com." always_nxdomain
 local-zone: "yc.flyblowfilippi.com." always_nxdomain
 local-zone: "flyersquare.com." always_nxdomain
-local-zone: "flyff.com." always_nxdomain
 local-zone: "flygame.io." always_nxdomain
 local-zone: "flygo.ru." always_nxdomain
 local-zone: "flying-bird.top." always_nxdomain
@@ -18493,6 +18497,7 @@ local-zone: "weblog.eseoul.go.kr." always_nxdomain
 local-zone: "parisiporlin-ktki.kemkes.go.id." always_nxdomain
 local-zone: "analytics.kemlu.go.id." always_nxdomain
 local-zone: "kotaprabumulih.go.id." always_nxdomain
+local-zone: "kuburayakab.go.id." always_nxdomain
 local-zone: "log.go.com." always_nxdomain
 local-zone: "log.mofa.go.kr." always_nxdomain
 local-zone: "sw88.go.com." always_nxdomain
@@ -19472,6 +19477,7 @@ local-zone: "li.hearstmags.com." always_nxdomain
 local-zone: "subscribe.hearstmags.com." always_nxdomain
 local-zone: "aps.hearstnp.com." always_nxdomain
 local-zone: "heartacheeasellikeness.com." always_nxdomain
+local-zone: "heartbreakingmind.com." always_nxdomain
 local-zone: "heartilyscales.com." always_nxdomain
 local-zone: "heat6have.com." always_nxdomain
 local-zone: "smetrics.heathrow.com." always_nxdomain
@@ -20038,6 +20044,7 @@ local-zone: "tracking.hostgator.com." always_nxdomain
 local-zone: "hostigram.xyz." always_nxdomain
 local-zone: "hostileconductive.com." always_nxdomain
 local-zone: "hostingcloud.racing." always_nxdomain
+local-zone: "hostingerapp.com." always_nxdomain
 local-zone: "hostinglive.in." always_nxdomain
 local-zone: "hostingprod.com." always_nxdomain
 local-zone: "hostwindsdns.com." always_nxdomain
@@ -20572,7 +20579,6 @@ local-zone: "igexin.com." always_nxdomain
 local-zone: "igfamous.me." always_nxdomain
 local-zone: "igg.biz." always_nxdomain
 local-zone: "ighabovethe.com." always_nxdomain
-local-zone: "games.iglesiaelarca.org." always_nxdomain
 local-zone: "trademark.iglesiaelarca.com." always_nxdomain
 local-zone: "ads.ign.com." always_nxdomain
 local-zone: "g.ign.com." always_nxdomain
@@ -20826,6 +20832,7 @@ local-zone: "improvedigital.com." always_nxdomain
 local-zone: "improvely.com." always_nxdomain
 local-zone: "improvementsplacid.com." always_nxdomain
 local-zone: "improviseprofane.com." always_nxdomain
+local-zone: "impulsoinicial.cl." always_nxdomain
 local-zone: "imr.sk." always_nxdomain
 local-zone: "imrk.net." always_nxdomain
 local-zone: "imrworldwide.com." always_nxdomain
@@ -22771,7 +22778,6 @@ local-zone: "khrebez.com." always_nxdomain
 local-zone: "adbsmetrics.kia.com." always_nxdomain
 local-zone: "omniture-ssl.kia.com." always_nxdomain
 local-zone: "kiajrcx.com." always_nxdomain
-local-zone: "kialux.com." always_nxdomain
 local-zone: "kibostores.com." always_nxdomain
 local-zone: "secure.kick1pore.com." always_nxdomain
 local-zone: "kickasscracks.com." always_nxdomain
@@ -22991,7 +22997,6 @@ local-zone: "targetsecure.kohler.com." always_nxdomain
 local-zone: "kohlerofficial.com." always_nxdomain
 local-zone: "ww8.kohls.com." always_nxdomain
 local-zone: "koiroomnotice.net." always_nxdomain
-local-zone: "koji.to." always_nxdomain
 local-zone: "koji-analytics.com." always_nxdomain
 local-zone: "kojlgwliewan.xyz." always_nxdomain
 local-zone: "kokobehnowder.com." always_nxdomain
@@ -23319,6 +23324,7 @@ local-zone: "smetrics.lakeshorelearning.com." always_nxdomain
 local-zone: "lakewoodmediagroup.net." always_nxdomain
 local-zone: "lakfbvoskxlc.com." always_nxdomain
 local-zone: "lalapush.com." always_nxdomain
+local-zone: "lalingualavita.com." always_nxdomain
 local-zone: "lalocandadelteatro.it." always_nxdomain
 local-zone: "lalofilters.website." always_nxdomain
 local-zone: "laluvygy.com." always_nxdomain
@@ -24232,6 +24238,7 @@ local-zone: "lookandfind.me." always_nxdomain
 local-zone: "brands.lookfantastic.com." always_nxdomain
 local-zone: "sbrands.lookfantastic.com." always_nxdomain
 local-zone: "lookinews.com." always_nxdomain
+local-zone: "metrika.lookmovie2.to." always_nxdomain
 local-zone: "lookmy.info." always_nxdomain
 local-zone: "get.lookout.com." always_nxdomain
 local-zone: "looksmart.com." always_nxdomain
@@ -24421,6 +24428,7 @@ local-zone: "jtracking.lulusoft.com." always_nxdomain
 local-zone: "perr.lum-sdk.io." always_nxdomain
 local-zone: "ametrics.lumen.com." always_nxdomain
 local-zone: "luminate.com." always_nxdomain
+local-zone: "luminodesignpark.com." always_nxdomain
 local-zone: "lumitos.com." always_nxdomain
 local-zone: "lumnstoodthe.info." always_nxdomain
 local-zone: "lumpmancommos.guru." always_nxdomain
@@ -24853,6 +24861,7 @@ local-zone: "tr.marsflag.com." always_nxdomain
 local-zone: "smetrics.marshalls.com." always_nxdomain
 local-zone: "smetrics.marshandmclennan.com." always_nxdomain
 local-zone: "martcubic.com." always_nxdomain
+local-zone: "maru.jp." always_nxdomain
 local-zone: "suncanny.marvel.com." always_nxdomain
 local-zone: "marvellouspeaches.com." always_nxdomain
 local-zone: "marvelousmonkeyjanes.com." always_nxdomain
@@ -26751,7 +26760,6 @@ local-zone: "nativex.com." always_nxdomain
 local-zone: "analytics.natlawreview.com." always_nxdomain
 local-zone: "natorm.com." always_nxdomain
 local-zone: "natpal.com." always_nxdomain
-local-zone: "natpet.com." always_nxdomain
 local-zone: "natregs.com." always_nxdomain
 local-zone: "nattepush.com." always_nxdomain
 local-zone: "naturalhealthsource.club." always_nxdomain
@@ -27852,6 +27860,7 @@ local-zone: "nzgldfeqvocgb.com." always_nxdomain
 local-zone: "nzikpan.com." always_nxdomain
 local-zone: "nzurlmq.com." always_nxdomain
 local-zone: "o-cean-fortune.biz." always_nxdomain
+local-zone: "o-f.com." always_nxdomain
 local-zone: "o-oe.com." always_nxdomain
 local-zone: "o-oo.ooo." always_nxdomain
 local-zone: "o-s.io." always_nxdomain
@@ -28373,7 +28382,6 @@ local-zone: "onlygamesforme.com." always_nxdomain
 local-zone: "st.onlygip.tech." always_nxdomain
 local-zone: "onlymega.com." always_nxdomain
 local-zone: "onlyoffice.eu." always_nxdomain
-local-zone: "onlysportplus.com." always_nxdomain
 local-zone: "onlyyourbiglove.com." always_nxdomain
 local-zone: "onmarketer.net." always_nxdomain
 local-zone: "onmarshtompor.com." always_nxdomain
@@ -28937,6 +28945,7 @@ local-zone: "oxupovjm.xyz." always_nxdomain
 local-zone: "oxydaserucked.com." always_nxdomain
 local-zone: "oxygenblobsglass.com." always_nxdomain
 local-zone: "oykwsbumtj.com." always_nxdomain
+local-zone: "oyndr.com." always_nxdomain
 local-zone: "analytics.oyorooms.com." always_nxdomain
 local-zone: "share.oyorooms.com." always_nxdomain
 local-zone: "sharen.oyorooms.com." always_nxdomain
@@ -30233,6 +30242,7 @@ local-zone: "powdermealfilth.com." always_nxdomain
 local-zone: "powerad.ai." always_nxdomain
 local-zone: "poweradblocker.com." always_nxdomain
 local-zone: "powerain.biz." always_nxdomain
+local-zone: "powerappsportals.com." always_nxdomain
 local-zone: "powerbiz.co." always_nxdomain
 local-zone: "poweredbyliquidfire.mobi." always_nxdomain
 local-zone: "powerlinks.com." always_nxdomain
@@ -32929,7 +32939,6 @@ local-zone: "s5.com." always_nxdomain
 local-zone: "s5qj82thv3dw.de." always_nxdomain
 local-zone: "s77.ro." always_nxdomain
 local-zone: "s7target.ru." always_nxdomain
-local-zone: "loginsecurityservices.eyepal.sa.com." always_nxdomain
 local-zone: "stats.sa-as.com." always_nxdomain
 local-zone: "saambaa.com." always_nxdomain
 local-zone: "data-043610b415.saarbruecker-zeitung.de." always_nxdomain
@@ -33322,9 +33331,7 @@ local-zone: "scnd-tr.com." always_nxdomain
 local-zone: "sconvtrk.com." always_nxdomain
 local-zone: "scoota.co." always_nxdomain
 local-zone: "scootermonkmortify.com." always_nxdomain
-local-zone: "adsgard.aprod.scopely.io." always_nxdomain
-local-zone: "collector.scopely.io." always_nxdomain
-local-zone: "preview-collector.scopely.io." always_nxdomain
+local-zone: "scopely.io." always_nxdomain
 local-zone: "score-feed.com." always_nxdomain
 local-zone: "scorecardresearch.com." always_nxdomain
 local-zone: "info.scorecardrewards.com." always_nxdomain
@@ -35381,6 +35388,7 @@ local-zone: "statdynamic.com." always_nxdomain
 local-zone: "ddc.statefarm.com." always_nxdomain
 local-zone: "smetrics.statefarm.com." always_nxdomain
 local-zone: "statefertilitycount.com." always_nxdomain
+local-zone: "stateinformatics.com." always_nxdomain
 local-zone: "statementsphilosophy.com." always_nxdomain
 local-zone: "smetrics.statestreet.com." always_nxdomain
 local-zone: "beacon.statful.com." always_nxdomain
@@ -36650,7 +36658,6 @@ local-zone: "text-link-ads.com." always_nxdomain
 local-zone: "secure.text6film.com." always_nxdomain
 local-zone: "smetrics.textbooks.com." always_nxdomain
 local-zone: "texterra.me." always_nxdomain
-local-zone: "cd.textfiles.com." always_nxdomain
 local-zone: "data-8b242b85ce.textilwirtschaft.de." always_nxdomain
 local-zone: "s6.textlink.vn." always_nxdomain
 local-zone: "textme.network." always_nxdomain
@@ -38136,6 +38143,7 @@ local-zone: "sjc2-cr2.twttr.com." always_nxdomain
 local-zone: "vpn.twttr.com." always_nxdomain
 local-zone: "twyn.com." always_nxdomain
 local-zone: "twyvergongs.com." always_nxdomain
+local-zone: "state.tx.us." always_nxdomain
 local-zone: "txbvpsgswl.com." always_nxdomain
 local-zone: "txjtyqaqtcgeo.xyz." always_nxdomain
 local-zone: "txouliypi.com." always_nxdomain
@@ -39000,6 +39008,7 @@ local-zone: "www2.vaitu.club." always_nxdomain
 local-zone: "tracker.services.vaix.ai." always_nxdomain
 local-zone: "vajoru.xyz." always_nxdomain
 local-zone: "vak345.com." always_nxdomain
+local-zone: "val.jp." always_nxdomain
 local-zone: "news.valawyersweekly.com." always_nxdomain
 local-zone: "valerieconstantine.com." always_nxdomain
 local-zone: "valeuceplangka.com." always_nxdomain
@@ -41516,7 +41525,6 @@ local-zone: "bs.yandex.ru." always_nxdomain
 local-zone: "bs-meta.yandex.ru." always_nxdomain
 local-zone: "bs-metadsp.yandex.ru." always_nxdomain
 local-zone: "extmaps-api.yandex.net." always_nxdomain
-local-zone: "forms.yandex.com." always_nxdomain
 local-zone: "grade.market.yandex.ru." always_nxdomain
 local-zone: "mc.yandex.com." always_nxdomain
 local-zone: "mc.yandex.ru." always_nxdomain
@@ -42250,7 +42258,6 @@ local-zone: "zk6.me." always_nxdomain
 local-zone: "zkapibwampca.com." always_nxdomain
 local-zone: "zkdkvnzsdxge.info." always_nxdomain
 local-zone: "zkdmdf.xyz." always_nxdomain
-local-zone: "bridge.zksync.io." always_nxdomain
 local-zone: "zlfthh.xyz." always_nxdomain
 local-zone: "zlhagtbdfz.com." always_nxdomain
 local-zone: "s.zlink1.com." always_nxdomain
