--- a/unbound/fake.blacklist.conf
+++ b/unbound/fake.blacklist.conf
@@ -3,10 +3,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 1 day
-# Last modified: 04 Jul 2023 22:01 UTC
-# Version: 2023.0704.2201.54
+# Last modified: 05 Jul 2023 21:58 UTC
+# Version: 2023.0705.2158.06
 # Syntax: Unbound
-# Number of entries: 15172
+# Number of entries: 15158
 #
 server:
 local-zone: "009972.com." always_nxdomain
@@ -143,7 +143,6 @@ local-zone: "abouttoolclearance.com." always_nxdomain
 local-zone: "abouttooltrade.com." always_nxdomain
 local-zone: "abshuzhi.com." always_nxdomain
 local-zone: "absolutefxoptions247.com." always_nxdomain
-local-zone: "absolutepoll.com." always_nxdomain
 local-zone: "absystem.cc." always_nxdomain
 local-zone: "absystem.pro." always_nxdomain
 local-zone: "abunthous.com." always_nxdomain
@@ -346,7 +345,6 @@ local-zone: "akasyl-otzberg.de." always_nxdomain
 local-zone: "akatee.com." always_nxdomain
 local-zone: "akce-pandora.cz." always_nxdomain
 local-zone: "akebicycle.com." always_nxdomain
-local-zone: "akenor.com." always_nxdomain
 local-zone: "akita.network." always_nxdomain
 local-zone: "akjamv.shop." always_nxdomain
 local-zone: "akku-laden.at." always_nxdomain
@@ -526,7 +524,6 @@ local-zone: "amazee.store." always_nxdomain
 local-zone: "amazelittles.com." always_nxdomain
 local-zone: "amazelossater.com." always_nxdomain
 local-zone: "amazing-poll.com." always_nxdomain
-local-zone: "amazingevals.com." always_nxdomain
 local-zone: "amazinggo.net." always_nxdomain
 local-zone: "amazingsite24.com." always_nxdomain
 local-zone: "amazinternal.com." always_nxdomain
@@ -1000,7 +997,6 @@ local-zone: "avisborgosanmartino.it." always_nxdomain
 local-zone: "avisical.shop." always_nxdomain
 local-zone: "avrilamaya.com." always_nxdomain
 local-zone: "avsbrokers.com." always_nxdomain
-local-zone: "avtrade.com." always_nxdomain
 local-zone: "aw-animal.com." always_nxdomain
 local-zone: "aw-handel.de." always_nxdomain
 local-zone: "awb-nordstadt.de." always_nxdomain
@@ -1302,7 +1298,6 @@ local-zone: "berbior.com." always_nxdomain
 local-zone: "bercasa.de." always_nxdomain
 local-zone: "beredge.com." always_nxdomain
 local-zone: "berg-reifenversand.com." always_nxdomain
-local-zone: "berger-research.net." always_nxdomain
 local-zone: "berghausoutlet.cc." always_nxdomain
 local-zone: "bergmannsschach.at." always_nxdomain
 local-zone: "berlin-angeboteshop.com." always_nxdomain
@@ -1350,7 +1345,6 @@ local-zone: "bestcryptominers.com." always_nxdomain
 local-zone: "bestdeals4younow.com." always_nxdomain
 local-zone: "bestdogsfood.website." always_nxdomain
 local-zone: "bestdsquared.com." always_nxdomain
-local-zone: "bestduct.life." always_nxdomain
 local-zone: "bestduka.com." always_nxdomain
 local-zone: "beste-apotheke.com." always_nxdomain
 local-zone: "beste-brennholz.de." always_nxdomain
@@ -1498,7 +1492,6 @@ local-zone: "bikesporthauf.de." always_nxdomain
 local-zone: "bikewheelsmfg.com." always_nxdomain
 local-zone: "bikexlc.com." always_nxdomain
 local-zone: "bikexschool.de." always_nxdomain
-local-zone: "bikeymikey.de." always_nxdomain
 local-zone: "bildhauerbergwerk.at." always_nxdomain
 local-zone: "bilenz.com." always_nxdomain
 local-zone: "billgoddess.shop." always_nxdomain
@@ -1571,7 +1564,6 @@ local-zone: "bitaviva.com." always_nxdomain
 local-zone: "bitbase.club." always_nxdomain
 local-zone: "bitblender.io." always_nxdomain
 local-zone: "bitblender.me." always_nxdomain
-local-zone: "bitcentglobal.com." always_nxdomain
 local-zone: "bitcllpay.top." always_nxdomain
 local-zone: "bitcode-prime.de." always_nxdomain
 local-zone: "bitcodelegend.com." always_nxdomain
@@ -1709,7 +1701,6 @@ local-zone: "blickpunkt24.at." always_nxdomain
 local-zone: "bling-beeswax.com." always_nxdomain
 local-zone: "blinggoodies.com." always_nxdomain
 local-zone: "blitz-haushalt.de." always_nxdomain
-local-zone: "blix-group.com." always_nxdomain
 local-zone: "blix24.com." always_nxdomain
 local-zone: "blizvyshop.com." always_nxdomain
 local-zone: "blizzak.de." always_nxdomain
@@ -1839,7 +1830,6 @@ local-zone: "botmediaz.com." always_nxdomain
 local-zone: "botnis.shop." always_nxdomain
 local-zone: "botsuanah.com." always_nxdomain
 local-zone: "bottegarocchi.com." always_nxdomain
-local-zone: "bottic.org." always_nxdomain
 local-zone: "bottlesjapan.com." always_nxdomain
 local-zone: "botyaku.cz." always_nxdomain
 local-zone: "botyasicsvyprodej.cz." always_nxdomain
@@ -2044,7 +2034,6 @@ local-zone: "buncru.com." always_nxdomain
 local-zone: "bundeszentralregisterwegweiser.de." always_nxdomain
 local-zone: "bundkauf.com." always_nxdomain
 local-zone: "bungy-jump.at." always_nxdomain
-local-zone: "bunniesrabatt.de." always_nxdomain
 local-zone: "burberp.com." always_nxdomain
 local-zone: "burgershirt.com." always_nxdomain
 local-zone: "buriayre.com." always_nxdomain
@@ -2174,7 +2163,6 @@ local-zone: "campoutlet.store." always_nxdomain
 local-zone: "campstan.com." always_nxdomain
 local-zone: "camptrunkduffel.com." always_nxdomain
 local-zone: "campwholesale.store." always_nxdomain
-local-zone: "camus24.com." always_nxdomain
 local-zone: "can-concretio-work.com." always_nxdomain
 local-zone: "can-postsmsnotice.com." always_nxdomain
 local-zone: "canabis-oil.com." always_nxdomain
@@ -3639,6 +3627,7 @@ local-zone: "discount-bazar.com." always_nxdomain
 local-zone: "discount-kobalt.com." always_nxdomain
 local-zone: "discountaarrivals.com." always_nxdomain
 local-zone: "discountapparels.store." always_nxdomain
+local-zone: "discountbloc.ru." always_nxdomain
 local-zone: "discountcamph.store." always_nxdomain
 local-zone: "discountcamph.website." always_nxdomain
 local-zone: "discountcat.website." always_nxdomain
@@ -3763,7 +3752,6 @@ local-zone: "domino-reifen.com." always_nxdomain
 local-zone: "domitri.co." always_nxdomain
 local-zone: "dommarzen-ns.pl." always_nxdomain
 local-zone: "dompetaman.live." always_nxdomain
-local-zone: "dompetexcellent.com." always_nxdomain
 local-zone: "donalovehair.de." always_nxdomain
 local-zone: "done-done.online." always_nxdomain
 local-zone: "donnasharpbed.com." always_nxdomain
@@ -3961,6 +3949,7 @@ local-zone: "eartischleuchten.com." always_nxdomain
 local-zone: "eastbu.com." always_nxdomain
 local-zone: "easthamforum.com." always_nxdomain
 local-zone: "eastsiderssoccer.com." always_nxdomain
+local-zone: "eastspringinvest.io." always_nxdomain
 local-zone: "easy-darts.com." always_nxdomain
 local-zone: "easy-ltd.eu." always_nxdomain
 local-zone: "easy-shops.store." always_nxdomain
@@ -4583,12 +4572,11 @@ local-zone: "fabnetstudio.com." always_nxdomain
 local-zone: "fabrikverkaufmerrellch.com." always_nxdomain
 local-zone: "fabtoulouse.at." always_nxdomain
 local-zone: "faburabrandworld.com." always_nxdomain
+local-zone: "fabwelt.com." always_nxdomain
 local-zone: "facepets.es." always_nxdomain
 local-zone: "fachmakler-berlin.de." always_nxdomain
 local-zone: "facilitieshvac.com." always_nxdomain
 local-zone: "factoryds.com." always_nxdomain
-local-zone: "onlinestores.factorysale2023.com." always_nxdomain
-local-zone: "si.factorysale2023.com." always_nxdomain
 local-zone: "facyline.de." always_nxdomain
 local-zone: "fadclothesus.com." always_nxdomain
 local-zone: "faehigkeiten.at." always_nxdomain
@@ -6984,7 +6972,6 @@ local-zone: "jewelryonsale.store." always_nxdomain
 local-zone: "jewelrysale.website." always_nxdomain
 local-zone: "jewelsfairy.com." always_nxdomain
 local-zone: "jfcase.com." always_nxdomain
-local-zone: "jfmovingstorage.com." always_nxdomain
 local-zone: "jgfrqhh.top." always_nxdomain
 local-zone: "jgregoryfineart.com." always_nxdomain
 local-zone: "jh-design.fr." always_nxdomain
@@ -7921,7 +7908,6 @@ local-zone: "localminidachshundpuppies.com." always_nxdomain
 local-zone: "lockebeauty.shop." always_nxdomain
 local-zone: "lockpickingstore.de." always_nxdomain
 local-zone: "locoford.com." always_nxdomain
-local-zone: "locymax.com." always_nxdomain
 local-zone: "loefflerrandalllove.com." always_nxdomain
 local-zone: "loepwatch.com." always_nxdomain
 local-zone: "loewe-vom-sauerland.de." always_nxdomain
@@ -8936,7 +8922,8 @@ local-zone: "jne-express.my.id." always_nxdomain
 local-zone: "www.pinjamnow.my.id." always_nxdomain
 local-zone: "yoli.my.id." always_nxdomain
 local-zone: "my-family.bike." always_nxdomain
-local-zone: "uschse04.my03.com." always_nxdomain
+local-zone: "store.uschse04.my03.com." always_nxdomain
+local-zone: "www.uschse04.my03.com." always_nxdomain
 local-zone: "mybell-refund.me." always_nxdomain
 local-zone: "myberlinshop.com." always_nxdomain
 local-zone: "mybestautologin567.com." always_nxdomain
@@ -10593,7 +10580,6 @@ local-zone: "productvoguenew.com." always_nxdomain
 local-zone: "proeuromeds.com." always_nxdomain
 local-zone: "professionistidelsorriso.eu." always_nxdomain
 local-zone: "profibikes.de." always_nxdomain
-local-zone: "profiforex.com." always_nxdomain
 local-zone: "profikauf.com." always_nxdomain
 local-zone: "profinvest.fun." always_nxdomain
 local-zone: "profiservice-24.info." always_nxdomain
@@ -13048,6 +13034,7 @@ local-zone: "tes-ib.cloud." always_nxdomain
 local-zone: "tes-ic.cloud." always_nxdomain
 local-zone: "tesauree.com." always_nxdomain
 local-zone: "tesla-for-doge.com." always_nxdomain
+local-zone: "tesla-openai.com." always_nxdomain
 local-zone: "teslabestfor.com." always_nxdomain
 local-zone: "teslabounce.com." always_nxdomain
 local-zone: "teslabrc.com." always_nxdomain
@@ -14493,7 +14480,6 @@ local-zone: "waresdining.com." always_nxdomain
 local-zone: "wareskids.com." always_nxdomain
 local-zone: "waresmergechic.com." always_nxdomain
 local-zone: "waresnewbike.com." always_nxdomain
-local-zone: "waresnewfad.com." always_nxdomain
 local-zone: "waresusmiss.com." always_nxdomain
 local-zone: "warmhalten.com." always_nxdomain
 local-zone: "warminsun.com." always_nxdomain
