--- a/unbound/doh.blacklist.conf
+++ b/unbound/doh.blacklist.conf
@@ -4,10 +4,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 7 days
-# Last modified: 06 Jul 2023 22:06 UTC
-# Version: 2023.0706.2206.00
+# Last modified: 07 Jul 2023 22:01 UTC
+# Version: 2023.0707.2201.49
 # Syntax: Unbound
-# Number of entries: 741
+# Number of entries: 748
 #
 server:
 local-zone: "ns.00dani.me." always_nxdomain
@@ -181,6 +181,7 @@ local-zone: "adguard.gbrossi.com.br." always_nxdomain
 local-zone: "dns.joaofidelix.com.br." always_nxdomain
 local-zone: "dns.opnsource.com.au." always_nxdomain
 local-zone: "dns.weixin.qq.com.cn." always_nxdomain
+local-zone: "dns.comeonjames.club." always_nxdomain
 local-zone: "commons.host." always_nxdomain
 local-zone: "comss.one." always_nxdomain
 local-zone: "comss.ru." always_nxdomain
@@ -276,7 +277,12 @@ local-zone: "doh.sb." always_nxdomain
 local-zone: "dot.pub." always_nxdomain
 local-zone: "ns1.dotls.org." always_nxdomain
 local-zone: "doh.dscloud.me." always_nxdomain
+local-zone: "aattwwss.duckdns.org." always_nxdomain
+local-zone: "home27.duckdns.org." always_nxdomain
+local-zone: "jurre-home.duckdns.org." always_nxdomain
 local-zone: "krtekvpn.duckdns.org." always_nxdomain
+local-zone: "osefcorp.duckdns.org." always_nxdomain
+local-zone: "punono.duckdns.org." always_nxdomain
 local-zone: "tuandns.duckdns.org." always_nxdomain
 local-zone: "tungdnsne.duckdns.org." always_nxdomain
 local-zone: "dukun.de." always_nxdomain
@@ -674,6 +680,7 @@ local-zone: "surt.ml." always_nxdomain
 local-zone: "switch.ch." always_nxdomain
 local-zone: "dns.syaifullah.com." always_nxdomain
 local-zone: "ibksturm.synology.me." always_nxdomain
+local-zone: "ihctw.synology.me." always_nxdomain
 local-zone: "a-bld.sys-adm.in." always_nxdomain
 local-zone: "bld.sys-adm.in." always_nxdomain
 local-zone: "doh.syshero.org." always_nxdomain
@@ -687,6 +694,7 @@ local-zone: "sg.teradns.org." always_nxdomain
 local-zone: "tx.teradns.org." always_nxdomain
 local-zone: "uk.teradns.org." always_nxdomain
 local-zone: "dns.tesem.dog." always_nxdomain
+local-zone: "cloud.tezoi.com." always_nxdomain
 local-zone: "dns.theres.one." always_nxdomain
 local-zone: "dns.therifleman.name." always_nxdomain
 local-zone: "doh.tiar.app." always_nxdomain
@@ -727,7 +735,6 @@ local-zone: "dns.wakgood.net." always_nxdomain
 local-zone: "wantaquddin.com." always_nxdomain
 local-zone: "abel.waringer-atg.de." always_nxdomain
 local-zone: "dns.warpnine.de." always_nxdomain
-local-zone: "kswro.web.id." always_nxdomain
 local-zone: "doh.this.web.id." always_nxdomain
 local-zone: "dns.wevpn.com." always_nxdomain
 local-zone: "dns-weblock.wevpn.com." always_nxdomain
