--- a/unbound/personal.blacklist.conf
+++ b/unbound/personal.blacklist.conf
@@ -3,10 +3,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 1 day
-# Last modified: 08 Jul 2023 14:11 UTC
-# Version: 2023.0708.1411.16
+# Last modified: 08 Jul 2023 23:39 UTC
+# Version: 2023.0708.2339.48
 # Syntax: Unbound
-# Number of entries: 40778
+# Number of entries: 40753
 #
 server:
 local-zone: "000space.com." always_nxdomain
@@ -14658,6 +14658,7 @@ local-zone: "cookietracking.eatonpowersource.com." always_nxdomain
 local-zone: "data-0be38fdd72.eatsmarter.de." always_nxdomain
 local-zone: "eatwithdifyf.com." always_nxdomain
 local-zone: "eautifulasawea.com." always_nxdomain
+local-zone: "eavesofefinegoldf.info." always_nxdomain
 local-zone: "analytic.eawi.de." always_nxdomain
 local-zone: "eaxritop.com." always_nxdomain
 local-zone: "eazel.com." always_nxdomain
@@ -18841,6 +18842,7 @@ local-zone: "haxbyq.com." always_nxdomain
 local-zone: "haxsoft.com." always_nxdomain
 local-zone: "sanalytics.hayneedle.com." always_nxdomain
 local-zone: "haywarn.com." always_nxdomain
+local-zone: "hayyad.com." always_nxdomain
 local-zone: "data-60d896f23d.haz.de." always_nxdomain
 local-zone: "data-6dde45f576.haz.de." always_nxdomain
 local-zone: "hazairgo.net." always_nxdomain
@@ -19949,6 +19951,7 @@ local-zone: "logs.ifunny.co." always_nxdomain
 local-zone: "prebid-cache.ifunny.co." always_nxdomain
 local-zone: "ifvox.com." always_nxdomain
 local-zone: "ifxrtcm.com." always_nxdomain
+local-zone: "ifzpvnrjp.com." always_nxdomain
 local-zone: "ifzwmwe.com." always_nxdomain
 local-zone: "sig.ig.com." always_nxdomain
 local-zone: "igaming-service.io." always_nxdomain
@@ -20399,7 +20402,7 @@ local-zone: "trk.go.ingrammicrocloud.com." always_nxdomain
 local-zone: "inhabitantquestions.com." always_nxdomain
 local-zone: "inhabitsensationdeadline.com." always_nxdomain
 local-zone: "ininmacerad.pro." always_nxdomain
-local-zone: "inistrack.net." always_nxdomain
+local-zone: "rt.inistrack.net." always_nxdomain
 local-zone: "analytics.init.de." always_nxdomain
 local-zone: "initialbanisters.com." always_nxdomain
 local-zone: "initiallycoffee.com." always_nxdomain
@@ -22288,7 +22291,6 @@ local-zone: "konican.com." always_nxdomain
 local-zone: "trk.konistrk.xyz." always_nxdomain
 local-zone: "konseptderi.com." always_nxdomain
 local-zone: "kont-news.com." always_nxdomain
-local-zone: "kontagent.net." always_nxdomain
 local-zone: "kontakt.io." always_nxdomain
 local-zone: "kontera.com." always_nxdomain
 local-zone: "kontribusiuang.top." always_nxdomain
@@ -22317,7 +22319,6 @@ local-zone: "kost.tv." always_nxdomain
 local-zone: "kostprice.com." always_nxdomain
 local-zone: "kostunivo.com." always_nxdomain
 local-zone: "secure.kota3chat.com." always_nxdomain
-local-zone: "koten.zone." always_nxdomain
 local-zone: "kotokot.com." always_nxdomain
 local-zone: "koudoukan.jp." always_nxdomain
 local-zone: "kouhad0.jp." always_nxdomain
@@ -22458,14 +22459,11 @@ local-zone: "rich.kuwo.cn." always_nxdomain
 local-zone: "wa.kuwo.cn." always_nxdomain
 local-zone: "kuwooque.com." always_nxdomain
 local-zone: "kvcd7w375h.ru." always_nxdomain
-local-zone: "kveff.com." always_nxdomain
 local-zone: "kveii.com." always_nxdomain
 local-zone: "kvemm.com." always_nxdomain
 local-zone: "kvevv.com." always_nxdomain
 local-zone: "kveww.com." always_nxdomain
 local-zone: "kvezz.com." always_nxdomain
-local-zone: "kvhcc.com." always_nxdomain
-local-zone: "kvhnn.com." always_nxdomain
 local-zone: "tdep.kvk.nl." always_nxdomain
 local-zone: "kvkaa.com." always_nxdomain
 local-zone: "kvtaaa.top." always_nxdomain
@@ -22618,7 +22616,6 @@ local-zone: "ed.large.nl." always_nxdomain
 local-zone: "largebrass.com." always_nxdomain
 local-zone: "larivieracasino.com." always_nxdomain
 local-zone: "sensors.larkplayerapp.com." always_nxdomain
-local-zone: "larpollicwilli.club." always_nxdomain
 local-zone: "las4srv.com." always_nxdomain
 local-zone: "laserdrivepreview.com." always_nxdomain
 local-zone: "smetrics.lasexta.com." always_nxdomain
@@ -22692,7 +22689,6 @@ local-zone: "lby2kd27c.com." always_nxdomain
 local-zone: "lc-cn-n1-shared.com." always_nxdomain
 local-zone: "lc2ads.ru." always_nxdomain
 local-zone: "lcaccorhu.com." always_nxdomain
-local-zone: "lcads.ru." always_nxdomain
 local-zone: "smetrics.lcbo.com." always_nxdomain
 local-zone: "lcfooiqhro.com." always_nxdomain
 local-zone: "lcjpudf.com." always_nxdomain
@@ -23259,7 +23255,6 @@ local-zone: "ads.livetv677.me." always_nxdomain
 local-zone: "ads.livetv679.me." always_nxdomain
 local-zone: "ads.livetv681.me." always_nxdomain
 local-zone: "liveupdt.com." always_nxdomain
-local-zone: "liveyield.com." always_nxdomain
 local-zone: "livezilla.net." always_nxdomain
 local-zone: "livezombymil.com." always_nxdomain
 local-zone: "livianuprein.com." always_nxdomain
@@ -23379,7 +23374,6 @@ local-zone: "logibrj.com." always_nxdomain
 local-zone: "logica-info.com." always_nxdomain
 local-zone: "buzz.logility.com." always_nxdomain
 local-zone: "lcs.loginfra.com." always_nxdomain
-local-zone: "loginhood.io." always_nxdomain
 local-zone: "share.loginradius.com." always_nxdomain
 local-zone: "webanalytics.logitech.com." always_nxdomain
 local-zone: "webtarget.logitech.com." always_nxdomain
@@ -23869,6 +23863,7 @@ local-zone: "track1122.malayluck.com." always_nxdomain
 local-zone: "smetric.malaysiaairlines.com." always_nxdomain
 local-zone: "mali4blat.com." always_nxdomain
 local-zone: "maliciousmusic.com." always_nxdomain
+local-zone: "malief.com." always_nxdomain
 local-zone: "malikiresids.com." always_nxdomain
 local-zone: "malkm.com." always_nxdomain
 local-zone: "analytics.mall.tv." always_nxdomain
@@ -26162,7 +26157,6 @@ local-zone: "netpoint-media.de." always_nxdomain
 local-zone: "netpub.media." always_nxdomain
 local-zone: "netratings.com." always_nxdomain
 local-zone: "netrefer.com." always_nxdomain
-local-zone: "nsm.tr.netsalesmedia.pl." always_nxdomain
 local-zone: "netseer.com." always_nxdomain
 local-zone: "netshelter.net." always_nxdomain
 local-zone: "netsolads.com." always_nxdomain
@@ -33308,7 +33302,6 @@ local-zone: "image-ad.sm.cn." always_nxdomain
 local-zone: "log.m.sm.cn." always_nxdomain
 local-zone: "sugs.m.sm.cn." always_nxdomain
 local-zone: "wolong-dsp.sm.cn." always_nxdomain
-local-zone: "sm-brothers.com." always_nxdomain
 local-zone: "sm-tc.cn." always_nxdomain
 local-zone: "smaad.net." always_nxdomain
 local-zone: "smaato.com." always_nxdomain
@@ -33411,7 +33404,6 @@ local-zone: "smiinformeri.online." always_nxdomain
 local-zone: "t.smile.eu." always_nxdomain
 local-zone: "web-analytics.smile.io." always_nxdomain
 local-zone: "smilepop.com." always_nxdomain
-local-zone: "smilesanitations.com." always_nxdomain
 local-zone: "smilewanted.com." always_nxdomain
 local-zone: "smileycentral.com." always_nxdomain
 local-zone: "cpx.smind.si." always_nxdomain
@@ -33770,7 +33762,6 @@ local-zone: "proditor.sparda.de." always_nxdomain
 local-zone: "aa.sparebank1.no." always_nxdomain
 local-zone: "sparechange.io." always_nxdomain
 local-zone: "spargegytling.com." always_nxdomain
-local-zone: "sparka-tan.info." always_nxdomain
 local-zone: "data1.sparkasse.at." always_nxdomain
 local-zone: "ads.sparkflow.net." always_nxdomain
 local-zone: "lenta.sparrow.ru." always_nxdomain
@@ -34052,7 +34043,6 @@ local-zone: "wa.st.com." always_nxdomain
 local-zone: "st-rdirect.com." always_nxdomain
 local-zone: "st1net.com." always_nxdomain
 local-zone: "staamcommunity.com." always_nxdomain
-local-zone: "stable-vpn-app.com." always_nxdomain
 local-zone: "stack-sonar.com." always_nxdomain
 local-zone: "stackadapt.com." always_nxdomain
 local-zone: "widgets.stackcommerce.com." always_nxdomain
@@ -34468,12 +34458,10 @@ local-zone: "sugarynotice.pro." always_nxdomain
 local-zone: "suggestive.com." always_nxdomain
 local-zone: "sugodeku.com." always_nxdomain
 local-zone: "sugulove.com." always_nxdomain
-local-zone: "sugulove69.net." always_nxdomain
 local-zone: "sugusagasu.com." always_nxdomain
 local-zone: "suhuhow.com." always_nxdomain
 local-zone: "suicidechapterspartnership.com." always_nxdomain
 local-zone: "log-dmp.suishenyun.cn." always_nxdomain
-local-zone: "suitaptcope.live." always_nxdomain
 local-zone: "suitbelongingoccasion.com." always_nxdomain
 local-zone: "suitcasessheriffpilgrim.com." always_nxdomain
 local-zone: "suiteshowedlottery.com." always_nxdomain
@@ -34957,7 +34945,6 @@ local-zone: "tanceteventu.com." always_nxdomain
 local-zone: "tanganrss.com." always_nxdomain
 local-zone: "tm.tangasulfide.com." always_nxdomain
 local-zone: "tangerine.io." always_nxdomain
-local-zone: "tangnickmienphi.com." always_nxdomain
 local-zone: "tangxu.xyz." always_nxdomain
 local-zone: "tangyamount.com." always_nxdomain
 local-zone: "tanishkenclave.in." always_nxdomain
@@ -35177,11 +35164,9 @@ local-zone: "techiteration.com." always_nxdomain
 local-zone: "www5.technews.tw." always_nxdomain
 local-zone: "te-static.technical-service.net." always_nxdomain
 local-zone: "tr.technical-service.net." always_nxdomain
-local-zone: "technicalakshay.com." always_nxdomain
 local-zone: "technicianforestallproper.com." always_nxdomain
 local-zone: "technicupdate.com." always_nxdomain
 local-zone: "technimum.com." always_nxdomain
-local-zone: "technologiemounac.com." always_nxdomain
 local-zone: "technologycontemplate.com." always_nxdomain
 local-zone: "technoratimedia.com." always_nxdomain
 local-zone: "technoshadows.com." always_nxdomain
@@ -35382,7 +35367,6 @@ local-zone: "tgram.ru." always_nxdomain
 local-zone: "tgryfh.xyz." always_nxdomain
 local-zone: "tgtag.io." always_nxdomain
 local-zone: "smetrics.tgw.com." always_nxdomain
-local-zone: "th1sis0ur22.com." always_nxdomain
 local-zone: "thagrals.net." always_nxdomain
 local-zone: "thaidrix.xyz." always_nxdomain
 local-zone: "thaidsir.xyz." always_nxdomain
@@ -35588,7 +35572,6 @@ local-zone: "thingsdetermine.com." always_nxdomain
 local-zone: "metrics.thingspeak.com." always_nxdomain
 local-zone: "smetrics.thingspeak.com." always_nxdomain
 local-zone: "thinkdream.com." always_nxdomain
-local-zone: "thinkfood.club." always_nxdomain
 local-zone: "trk.thinkhdi.com." always_nxdomain
 local-zone: "tracker.thinkindot.com." always_nxdomain
 local-zone: "thinknear-hosted.thinknearhub.com." always_nxdomain
@@ -40523,7 +40506,6 @@ local-zone: "zeppy.io." always_nxdomain
 local-zone: "bms.zeptolab.com." always_nxdomain
 local-zone: "zer9g.com." always_nxdomain
 local-zone: "zerads.com." always_nxdomain
-local-zone: "zerbei.com." always_nxdomain
 local-zone: "zeredress.com." always_nxdomain
 local-zone: "zergnet.com." always_nxdomain
 local-zone: "c1hit.zerkalo.io." always_nxdomain
@@ -40536,7 +40518,6 @@ local-zone: "zero-zone.jp." always_nxdomain
 local-zone: "zerocha.jp." always_nxdomain
 local-zone: "zeropark.com." always_nxdomain
 local-zone: "zerostats.com." always_nxdomain
-local-zone: "zesty-lady.pro." always_nxdomain
 local-zone: "zestycrime.com." always_nxdomain
 local-zone: "zetadeo.com." always_nxdomain
 local-zone: "zetchopa.xyz." always_nxdomain
@@ -40561,10 +40542,8 @@ local-zone: "sys.zhangyue.com." always_nxdomain
 local-zone: "zhanzhang.net." always_nxdomain
 local-zone: "zhaozongqq.com." always_nxdomain
 local-zone: "zhctrack.net." always_nxdomain
-local-zone: "zheevmmvlwg.com." always_nxdomain
 local-zone: "zhej78i1an8w6ceu.com." always_nxdomain
 local-zone: "zheltaya.ru." always_nxdomain
-local-zone: "zhhxxnfuxn.com." always_nxdomain
 local-zone: "zhibo128x1.xyz." always_nxdomain
 local-zone: "v.zhihe.mobi." always_nxdomain
 local-zone: "crash2.zhihu.com." always_nxdomain
@@ -40643,7 +40622,6 @@ local-zone: "s.zlinkb.com." always_nxdomain
 local-zone: "s.zlinkc.com." always_nxdomain
 local-zone: "s.zlinkd.com." always_nxdomain
 local-zone: "zlinkm.com." always_nxdomain
-local-zone: "zljwhbuagdvl.com." always_nxdomain
 local-zone: "zlp6s.pw." always_nxdomain
 local-zone: "creator.zmags.com." always_nxdomain
 local-zone: "stats.zmags.com." always_nxdomain
@@ -40713,7 +40691,6 @@ local-zone: "zprk.io." always_nxdomain
 local-zone: "zqtk.net." always_nxdomain
 local-zone: "zquent.com." always_nxdomain
 local-zone: "app.zrotary.com." always_nxdomain
-local-zone: "zrwpporp.com." always_nxdomain
 local-zone: "ssp.zryydi.com." always_nxdomain
 local-zone: "zscwdu.com." always_nxdomain
 local-zone: "zslhmw.com." always_nxdomain
@@ -40724,7 +40701,6 @@ local-zone: "ztrck.me." always_nxdomain
 local-zone: "ztsrv.com." always_nxdomain
 local-zone: "ztulkecpeo.com." always_nxdomain
 local-zone: "ztvzfq.com." always_nxdomain
-local-zone: "ztyqrwinqpvque.com." always_nxdomain
 local-zone: "ztzguv.com." always_nxdomain
 local-zone: "zubivu.com." always_nxdomain
 local-zone: "zuciwang.com." always_nxdomain
@@ -40761,7 +40737,6 @@ local-zone: "zvwhrc.com." always_nxdomain
 local-zone: "zwaar.net." always_nxdomain
 local-zone: "zwnoeqzsuz.com." always_nxdomain
 local-zone: "zwqzxh.com." always_nxdomain
-local-zone: "zwwlaasbezg.com." always_nxdomain
 local-zone: "zwyfuxoh.com." always_nxdomain
 local-zone: "zx-adnet.com." always_nxdomain
 local-zone: "zxcdn.com." always_nxdomain
